# cynditaylor-com-bot

./: .augment-guidelines  .be  .dockerignore  .env  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  config.py  main.py  main_with_tools.py  package.json  pyproject.toml  requirements.txt  run  run.py  run_with_telemetry.py  run_with_tools.py  test  visualize-conversation  visualize_conversation.py
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json
agent/: _fetch_secret.py  agent.py  agent_with_tools.py  cyndibot.py  hello.py  inbound.py  observability.py  server.py
collector/: .dockerignore  .env.example  Dockerfile  README.md  config.env  config.yaml
infra/: README.md
llm/: frank_provider.py  provider.py
notes/: 2026-05-03-end-of-session-dispatcher-events.md  2026-05-03-end-of-session-ses-iam-fix.md  2026-05-03-end-of-session-session-id-on-agent.md  2026-05-03-end-of-session.md  ACTIVE.md  Clues-about-OpenTelemetry.md  FAILED-fix-conversation-history.md  HOLD-instrumentation.md  HOLD-proper-testing.md  PAST-bug-fix-empty-convo.md  PAST-otel-convo-partner.md  PAST-record-instruction.md  PAST-refactor-conversation-structure.md  PAST-structure-conversation.md  PAST-test-refactor.md  TELEMETRY.md  TODO.md  agentcore-contract.md  opentelemetry_in_python.md
old_chat_logs/: 2023-07-15-remove-untested-code.md  2023-07-16-fake-adapter-and-gitignore.md  2023-07-16-remove-obvious-comments.md  2023-07-16-replace-mocks-with-fake.md  2023-07-17-npm-test-script.md  2023-07-18-opentelemetry-instrumentation.md  (+7 more)
(+151 files in other folders)
